--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,13 @@
         android:theme="@style/Theme.MyEveryRecipe"
         tools:targetApi="31">
         <activity
-            android:name=".ReadRecipe"
+            android:name=".EggTimer"
             android:exported="false"
             android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".ReadRecipe"
+            android:exported="false"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".ReadMaterial"
             android:exported="false"
